force-app/main/default/objects/Opportunity_Auto_Close_Log__c/Opportunity_Auto_Close_Log__c.object-meta.xml
<CustomObject>
    <description>Logs of closing opportunities from the custom payment trigger.</description>
    <label>Opportunity Auto Close Log</label>
    <nameField>
        <displayFormat>ACL-{000000}</displayFormat>
        <label>Opportunity Auto Close Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Auto Close Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>