force-app/main/default/objects/Opportunity_Auto_Close_Log__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice</label>
    <referenceTo>fw1__Invoice__c</referenceTo>
    <relationshipLabel>Opportunity Auto Close Logs</relationshipLabel>
    <relationshipName>Opportunity_Auto_Close_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>