force-app/main/default/objects/Opportunity_Auto_Close_Log__c/fields/New_Stage__c.field-meta.xml
<CustomField>
    <fullName>New_Stage__c</fullName>
    <label>New Stage</label>
    <length>80</length>
    <type>Text</type>
</CustomField>