force-app/main/default/objects/Opportunity_Auto_Close_Log__c/fields/Next_Stage__c.field-meta.xml
<CustomField>
    <fullName>Next_Stage__c</fullName>
    <label>Next Stage</label>
    <length>80</length>
    <type>Text</type>
</CustomField>