force-app/main/default/objects/Opportunity_Auto_Close_Log__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity Auto Close Logs</relationshipLabel>
    <relationshipName>Opportunity_Auto_Close_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>