force-app/main/default/objects/Opportunity_Auto_Close_Log__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <description>Outcome of the auto close.  Opportunity Closed, No Matching Opportunity, etc.</description>
    <label>Outcome</label>
    <length>50</length>
    <type>Text</type>
</CustomField>