force-app/main/default/objects/Opportunity_Auto_Close_Log__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment</label>
    <referenceTo>fw1__Payment__c</referenceTo>
    <relationshipLabel>Opportunity Auto Close Logs</relationshipLabel>
    <relationshipName>Opportunity_Auto_Close_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>