force-app/main/default/objects/Opportunity_Auto_Close_Log__c/fields/Previous_Stage__c.field-meta.xml
<CustomField>
    <fullName>Previous_Stage__c</fullName>
    <label>Previous Stage</label>
    <length>80</length>
    <type>Text</type>
</CustomField>